It fixes some attributes, wraps the page bodies and fixes the footer at the bottom

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,6 +1,33 @@
+html, body {
+    height: 100%;
+}
+
+#wrap {
+    min-height: 80%;
+}
+
+#main {
+    overflow: auto;
+    padding-bottom: 150px; /* this needs to be bigger than footer height*/
+}
+
+footer {
+    position: relative;
+    clear: both;
+    padding-top: 20px;
+    background-color: #36622b;
+}
+
+.copyright{
+
+}
+.bg-primary {
+    background-color: #36622b!important;
+}
+
+
 body {
     background-color: #c6e377 !important;
-
 }
 
 .fixed-top-menu {
@@ -17,14 +44,11 @@ body {
 }
 
 .logo {
-    margin: 1% 2% 0.5% 0;
-    width: 10%;
-    height: 7%;
-
+    width: 50px;
+    height: 50px;
 }
 
 .textContainer {
-
     position: relative;
     margin: 5% 40% 5% 30%;
     text-align: center;
@@ -104,37 +128,25 @@ body {
     text-align: right;
     border: 0;
 }
+
 .btn:link,
-.btn:visited{
-  text-decoration: none;
-  text-transform:uppercase;
-  position:relative;
-  top:0;
-  left:0;
-  padding:20px 40px;
-  border-radius:100px;
-  display:inline-block;
-  transition: all .5s;
-}
-.btn-green{
-  background:#36622b;
-  color:#fbfad3;
-  padding-top: 20px;
-  padding-bottom: 20px;
-}
-
-footer {
-    background: #36622b;
-    position: fixed;
+.btn:visited {
+    text-decoration: none;
+    text-transform: uppercase;
+    position: relative;
+    top: 0;
     left: 0;
-    bottom: 0;
-    width: 100%;
-    height: 40px;
-    text-align: center;
+    padding: 20px 40px;
+    border-radius: 100px;
+    display: inline-block;
+    transition: all .5s;
 }
 
-.footer-span {
-    color: ghostwhite;
+.btn-green {
+    background: #36622b;
+    color: #fbfad3;
+    padding-top: 20px;
+    padding-bottom: 20px;
 }
 
 .inscribir-action-div {
